Fixed broken layout because of material icons change

--- a/core/resources/assets/less/pages.less
+++ b/core/resources/assets/less/pages.less
@@ -1206,6 +1206,7 @@ h3.timeline-title {
     padding-left: 40px;
   }
   .form-control-feedback {
+    position: absolute;
     left: 15px;
     top: 3px;
     color: fade(@inverse,40%);
